sln: add sln to 3.9

--- a/hw12.tex
+++ b/hw12.tex
@@ -79,6 +79,11 @@
     \end{solution}
         
     \item[9.] Найдите второй максимум в массиве за $n + \lceil \log_2 n \rceil- 2$ сравнение и докажите, что это точная нижняя оценка, то есть меньшего количества сравнений может не хватить.
+    \begin{solution}
+        Данную задачу можно решить, если при поиске максимального элемента разбивать исходный массив на два подмассива и искать максимум рекурсивно. При этом каждому элементу исходного массива сопоставим массив $contenders$, состоящий из индексов элементов, с которыми он сравнивался на предыдущих шагах. Если сравниваются два элемента $a, b$ и $a > b$, то нужно добавить индекс $b$ в массив претендентов для $a$: $a.contenders.append(index(b))$, а про массив претендентов на второй максимум для $b$ можно забыть, потому что $b$ уже точно не будет максимумом: $delete\, b.contenders$. В итоге, рекурсивно найдя максимум $a^*$ в исходном массиве, мы заимеем массив претендентов на второй максимум $a^*.contenders$, в котором можно уже найти и второй максимум исходного массива. Второй максимум (точнее его индекс) исходного массива будет лежать в $a^*.contenders$, потому что туда попадали только элементы, которые были наибольшими в своих поддеревьях сравнений. Получается, что сначала мы находим первый максимум в исходном массиве за $len(arr)-1$ сравнений, а потом находим максимум в массиве претендентов тоже за $len(arr^*)-1$ сравнений. Длина первого массива $n$, а длина второго массива $\lceil \log_2 n \rceil$, потому что в него падали только те элементы, с которыми сравнивался максимум $a^*$. Суммарно получаем $n + \lceil \log_2 n \rceil - 2$ сравнений для поиска второго максимума в массиве.
+
+        Для поиска максимального элемента в массиве нужно сделать $n-1$ сравнений, которые появляются при рекурсивном поиске максимума (сначала дробим массив на пары и сравниваем в парах, потом победителей делим на пары и сравниваем в парах и так далее, пока не будет два элемента, сравнивающихся между собой). Сравнение задает бинарное отношение над двумя элементами, поэтому, имея дерево сравнений мы можем делать заключения об отношении узлов, а именно, родитель всегда больше всех своих потомков (потому что ищем максимум). Используя эту информацию, можно избежать ненужных сравнений при поиске второго максимума (ведь наивная стратегия -- удалить глобальный максимум из массива и снова найти новый максимум за $(n-1)-1$ сравнений). Эффективнее всего -- это просмотреть все элементы, с которыми сравнивался максимальный (корень дерева сравнений), потому что про них мы знаем, что они меньше максимального, но больше всех тех, с которыми сравнивались они. Ну а из построения бинарного дерева таких претендентов будет как раз $\lceil \log_2 n \rceil$. Среди них максимум ищется за $\lceil \log_2 n \rceil - 1$. Поэтому найти второй максимум в массиве быстрее, чем за $n + \lceil \log_2 n \rceil - 2$ нельзя.
+    \end{solution}
 \end{enumerate}
 
 \subsection{Демоническое программирование HW7}
