--- a/hw12.tex
+++ b/hw12.tex
@@ -54,7 +54,7 @@
     \end{solution}
 \end{enumerate}
 
-\subsection{Разделяй и встаствуй HW3}
+\subsection{Разделяй и властвуй HW3}
 \begin{enumerate}
     \item[8.] Дан массив из $2n$ различных чисел. Найдите минимальное и максимальное за $3n - 2$ сравнения и докажите, что это точная нижняя оценка, то есть меньшего количества сравнений может не хватить.
     \begin{solution}
