sln: add sln to 9.5

--- a/hw12.tex
+++ b/hw12.tex
@@ -137,5 +137,96 @@
     \end{enumerate}
 \end{enumerate}
 
+\subsection{Жадные алгоритмы HW9}
+\begin{enumerate}
+    \item[5.] 
+    Будем называть \textit{независимым множеством} (или \textit{антикликой}) подмножество вершин
+    графа, в котором нет ребер. Пусть в графе $G$ есть $V$ вершин и $E$ ребер, а максимальная
+    степень равна $d$. Найдите в нём независимое множество размера хотя бы:
+	\begin{enumerate}
+	  \item $\frac{n}{d+1}$ за время $\O(V + E)$
+	  \begin{solution}
+      Для решения данной задачи заведем массив $visited$, в котором будем отмечать те вершины, которые уже взяты или которые нельзя взять. Дальше итерируемся по вершинам графа: берем первую вершину и отмечаем в $visited$, что уже посетили ее, дальше смотрим соседей первой вершины и тоже отмечаем их. Итерируясь дальше, ищем следующую неотмеченную вершину и повторяем с ней те же шаги. Для всех неотмеченных вершин на текущей итерации мы делаем $deg(v_i)+1$ добавление в $visited$ -- отмечаем вершину и всех ее соседей. Пройдясь по всем вершинам, мы выделим все $n$ вершин:
+      \begin{equation}
+        \sum_{i \in V^*}(deg(v_i)+1)=n,
+      \end{equation}
+      где $V^*$ -- независимое множество. Но если количество элементов в антиклике равно $\alpha$, то
+      \begin{equation}
+        n=\sum_{i \in V^*}(deg(v_i)+1) \le d\cdot\alpha + \alpha \Rightarrow \alpha \ge \frac{n}{d+1}
+      \end{equation}
+      Таким образом, независимое множество размером хотя бы $\frac{n}{d+1}$ найдено за время $\O(V + E)$, потому что проходим один раз по каждой вершине и каджому ребру.
+    \end{solution}
+	  \item $\sum\limits_{v\in V(G)} \frac{1}{\deg(v)+1}$ за время $\O(V \log{V} + E)$
+	  \begin{solution}
+      Для получения такой антиклики можно отсортировать вершины по увеличению  степени вершины и проделать алгоритм из предыдущего пункта только уже в обновленном порядке следования вершин. В таком случае оценка на количество элементов в антиклике изменится следующим образом:
+      \begin{equation}
+        \alpha\ge\frac{n}{d+1} = \sum\limits_{v\in V(G)} \frac{1}{d+1} \to \sum\limits_{v\in V(G)} \frac{1}{\deg(v)+1}
+      \end{equation}
+      Так как для каждой вершины выполняется $deg(v_i) \le d$, то количество элементов в антиклике увеличится, потому что знаменатели уменьшатся. В таком случае асимптотика изменится на $\O(V \log{V} + E)$ в связи с сортировкой вершин.
+    \end{solution}
+	\end{enumerate}
+	Считайте, что граф уже дан в памяти в виде массива, где для каждой вершины хранится список её соседей.
 
+%   \item {\bf Пятачок, у тебя есть дома ружье?}\\
+% 	Даны $n$ непересекающихся кругов на плоскости. Мы стоим в точке $(0,0)$ и можем стрелять по прямой.
+% 	Минимальным числом выстрелов проткнуть все круги.
+
+%   \item
+% 	$n$ школьников упали в яму глубины $S$. Каждый школьник имеет рост (от ног до плеч) $h_i$
+% 	и длину рук $l_i$. Школьники могут вставать друг другу на плечи, верхний школьник может
+% 	вытянуть руки. Чтобы выбраться из ямы необходимо дотянуться руками до уровня земли.
+% 	\begin{enumerate}
+% 		\item Могут ли выбраться все школьники? $\O(n \log n)$.
+% 		\item Какое максимальное число школьников может выбраться? $\O(n \log n)$.
+% 	\end{enumerate}
+
+%   \item
+%     В фирму поступают заказы, которые можно выполнять в произвольном
+%     порядке. В каждый момент времени можно работать ровно над одним
+%     заказом.  Изначально заказов нет, $i$-й заказ поступает в момент
+%     времени $r_i$, работать над ним нужно $t_i$. Пусть $e_i$~-- момент
+%     окончания выполнения заказа номер $i$. Распределите работу над
+%     заказами так, чтобы минимизировать $\sum_i e_i$. Переходить от
+%     одного заказа к другому можно в любой момент времени (даже если
+%     заказ не доделан до конца, незаконченный заказ можно будет 
+%     возобновить с того же места). 
+%     Свойства заказа ($r_i, t_i$) не известны до
+%     момента его поступления. Время $\O(n \log n)$, при условии, что
+%     всего поступит $n$ заказов.
+
+%   \item
+%     \textit{Раскраской вершин} графа $G = (V, E)$ называется функция $c: V \to [m]$, сопоставляющая каждой вершине $G$ цвет от $1$ до $m$. 
+%  	Раскраска называется \textit{правильной}, если каждая пара соседних вершин имеет разные цвета. 
+
+%  	Для неориентированного графа $G = (V, E)$ его \textit{хроматическим числом} $\chi(G)$ называется наименьшее возможное число цветов в правильной раскраске $G$.
+
+%  	Для графа $G$ обозначим размер его максимального полного подграфа через $\omega(G)$.
+
+%  	Рассмотрим на вещественной прямой замкнутые отрезки $I_1, I_2, \dots, I_n$. Сопоставим каждому отрезку $I_i$ вершину $v_i$ 
+%  	и каждой паре пересекающихся отрезков $(I_i, I_j)$ ребро $(v_i, v_j)$. Такой граф будем называть \textit{интервальным графом}.
+
+%  	Будем называть граф $G$ \textit{совершенным}, если для любого его индуцированного подграфа $H$ верно $\omega(H) = \chi(H)$. 
+
+%  	Докажите, что каждый интервальный граф совершенен. Приведите алгоритм, красящий интервальный граф $G = (V, E)$ с $|V| = n$ в $\omega(H)$ цветов за время $O(n \log(n))$.
+
+%   \item
+%  	В фирму поступают заказы, которые можно выполнять в произвольном
+%  	порядке. В каждый момент времени можно работать ровно над одним
+%  	заказом.  Изначально заказов нет, $i$-й заказ поступает в момент
+%  	времени $r_i$, работать над ним нужно $t_i$. 
+
+%  	Все заказы объединены в проекты (один заказ относится к одному
+%  	проекту, заказы из одного проекта могут поступать не подряд).
+
+%  	Пусть $e_i$~-- момент окончания выполнения последнего (в порядке
+%  	выполнения) из заказов в проекте с номером $i$.
+
+%  	Нужно распределить работу над заказами так, чтобы минимизировать
+%  	$\sum_i e_i$. Свойства заказа ($r_i, t_i$, его проект) не известны
+%  	до момента его поступления.  Переходить от одного заказа к другому
+%  	можно в любой момент времени (даже если заказ не доделан до конца).
+
+%  	Придумайте решение, которое не более чем в два раза хуже
+%  	оптимального.  Время $\O(n \log n)$, при условии, что всего поступит $n$ заказов.
+\end{enumerate}
     
