sln: add sln to 9.7

--- a/hw12.tex
+++ b/hw12.tex
@@ -171,14 +171,24 @@
 % 	Даны $n$ непересекающихся кругов на плоскости. Мы стоим в точке $(0,0)$ и можем стрелять по прямой.
 % 	Минимальным числом выстрелов проткнуть все круги.
 
-%   \item
-% 	$n$ школьников упали в яму глубины $S$. Каждый школьник имеет рост (от ног до плеч) $h_i$
-% 	и длину рук $l_i$. Школьники могут вставать друг другу на плечи, верхний школьник может
-% 	вытянуть руки. Чтобы выбраться из ямы необходимо дотянуться руками до уровня земли.
-% 	\begin{enumerate}
-% 		\item Могут ли выбраться все школьники? $\O(n \log n)$.
-% 		\item Какое максимальное число школьников может выбраться? $\O(n \log n)$.
-% 	\end{enumerate}
+  \item[7.]
+	$n$ школьников упали в яму глубины $S$. Каждый школьник имеет рост (от ног до плеч) $h_i$
+	и длину рук $l_i$. Школьники могут вставать друг другу на плечи, верхний школьник может
+	вытянуть руки. Чтобы выбраться из ямы необходимо дотянуться руками до уровня земли.
+	\begin{enumerate}
+		\item Могут ли выбраться все школьники? $\O(n \log n)$.
+		\begin{solution}
+      Пусть сумма ростов всех школьников это $H$. Рассмотрим $i$-го школьника. Он сможет выбраться, если высота тех, кто под ним плюс его руки будут не меньше глубины ямы:
+      \begin{equation}
+        H-\sum_{j}h_j + l_i \ge S \Rightarrow l_i+H-S\ge\sum_{j}h_j,
+      \end{equation}
+      где $j$ -- школьники над школьников $i$. Задача свелась к задаче о дедлайнах, где $d_i=h_i+l_i+H-S$, а $t_i=h_i$. Решая задачу о дедлайнах при таких условиях можно получить информацию, смогут ли выбраться все школьники.
+    \end{solution}
+		\item Какое максимальное число школьников может выбраться? $\O(n \log n)$.
+		\begin{solution}
+      Решение предыдущего пункта выдает количество школьников, которые смогут выбраться, а также их индексы. Так как это решение задачи о дедлайнах, то можно утверждать, что решение оптимальное и корректное и выдаст максимальное число школьников, которые смогут выбраться.
+    \end{solution}
+	\end{enumerate}
 
 %   \item
 %     В фирму поступают заказы, которые можно выполнять в произвольном
