sln: add sln to 9.8

--- a/hw12.tex
+++ b/hw12.tex
@@ -190,19 +190,29 @@
     \end{solution}
 	\end{enumerate}
 
-%   \item
-%     В фирму поступают заказы, которые можно выполнять в произвольном
-%     порядке. В каждый момент времени можно работать ровно над одним
-%     заказом.  Изначально заказов нет, $i$-й заказ поступает в момент
-%     времени $r_i$, работать над ним нужно $t_i$. Пусть $e_i$~-- момент
-%     окончания выполнения заказа номер $i$. Распределите работу над
-%     заказами так, чтобы минимизировать $\sum_i e_i$. Переходить от
-%     одного заказа к другому можно в любой момент времени (даже если
-%     заказ не доделан до конца, незаконченный заказ можно будет 
-%     возобновить с того же места). 
-%     Свойства заказа ($r_i, t_i$) не известны до
-%     момента его поступления. Время $\O(n \log n)$, при условии, что
-%     всего поступит $n$ заказов.
+  \item[8.]
+    В фирму поступают заказы, которые можно выполнять в произвольном
+    порядке. В каждый момент времени можно работать ровно над одним
+    заказом.  Изначально заказов нет, $i$-й заказ поступает в момент
+    времени $r_i$, работать над ним нужно $t_i$. Пусть $e_i$~-- момент
+    окончания выполнения заказа номер $i$. Распределите работу над
+    заказами так, чтобы минимизировать $\sum_i e_i$. Переходить от
+    одного заказа к другому можно в любой момент времени (даже если
+    заказ не доделан до конца, незаконченный заказ можно будет 
+    возобновить с того же места). 
+    Свойства заказа ($r_i, t_i$) не известны до
+    момента его поступления. Время $\O(n \log n)$, при условии, что
+    всего поступит $n$ заказов.
+    \begin{solution}
+        При решении данной задачи удобно воспользоваться минкучей, в которой будем хранить времена обработки заказов. Сначала отсортируем заказы по времени поступления и будем итерироваться по ним: добавляем первый заказ в кучу и при приходе второго заказа смотрим, закончили ли мы с первым. Если закончили, то просто добавляем в кучу второй заказ, а если не закончили, то вычтем из времени обработки первого заказа столько, сколько отработали к текущему моменту, а также добавим время обработки второго заказа в кучу. Теперь, если в корне остался первый заказ, то продолжаем работать над ним, а если в корне оказался второй заказ, то прерываем работу над первым и начинаем выполнять второй. Получается, что в работе находится тот заказ, который лежит в корне кучи. Извлекаем корень тогда, когда прошло время его выполнения.
+
+        Корректность:
+        Покажем, что такое решение дает оптимальное распределение заказов. Пусть есть какое-то другое оптимальное решение, которое отличается от нашего. Пусть наш алгоритм сначала выполняет работу $x_1$, а другой оптимальный алгоритм сначала выполняет работу $x_1'$. Так как нужно выполнить все поступившие заказы, то другой оптимальный алгоритм все равно выполнит заказ $x_1$ только в другое время. $x_1$ и $x_1'$ начинаются в одно время, и понятно, что, так как наш алгоритм в первую очередь выполняет те задачи, которые закончатся раньше, то $x_1'$ можно заменить на $x_1$. В таком случае заказ из нашего решения выполнится раньше, и остаток времени до второго заказа из другого оптимального решения будем выполнять заказ $x_1'$ до момента, когда по расписанию
+        нужно будет выполнять $x_2'$. Сам заказ $x_1'$ закончим, когда по расписанию должен выполнятся заказ $x_1$ в другом оптимальном решении. Получается, что сумма $\sum_i e_i$ не увеличилась и дальнейшие аналогичные преобразования другого оптимального решения в конечном итоге дадут наше решение. То есть наше решение не хуже оптимального.
+
+        Асимптотика:
+        Сначала сортируем за $\O(n \log n)$, а потом для каждого заказа один раз добавляем в кучу и один раз извлекаем из кучи за $\O(2n \log n)$. Суммарно получаем асимптотику $\O(n \log n)$.
+    \end{solution}
 
 %   \item
 %     \textit{Раскраской вершин} графа $G = (V, E)$ называется функция $c: V \to [m]$, сопоставляющая каждой вершине $G$ цвет от $1$ до $m$. 
