sln: add sln to 12.1

--- a/hw12.tex
+++ b/hw12.tex
@@ -213,40 +213,13 @@
         Асимптотика:
         Сначала сортируем за $\O(n \log n)$, а потом для каждого заказа один раз добавляем в кучу и один раз извлекаем из кучи за $\O(2n \log n)$. Суммарно получаем асимптотику $\O(n \log n)$.
     \end{solution}
-
-%   \item
-%     \textit{Раскраской вершин} графа $G = (V, E)$ называется функция $c: V \to [m]$, сопоставляющая каждой вершине $G$ цвет от $1$ до $m$. 
-%  	Раскраска называется \textit{правильной}, если каждая пара соседних вершин имеет разные цвета. 
-
-%  	Для неориентированного графа $G = (V, E)$ его \textit{хроматическим числом} $\chi(G)$ называется наименьшее возможное число цветов в правильной раскраске $G$.
-
-%  	Для графа $G$ обозначим размер его максимального полного подграфа через $\omega(G)$.
-
-%  	Рассмотрим на вещественной прямой замкнутые отрезки $I_1, I_2, \dots, I_n$. Сопоставим каждому отрезку $I_i$ вершину $v_i$ 
-%  	и каждой паре пересекающихся отрезков $(I_i, I_j)$ ребро $(v_i, v_j)$. Такой граф будем называть \textit{интервальным графом}.
-
-%  	Будем называть граф $G$ \textit{совершенным}, если для любого его индуцированного подграфа $H$ верно $\omega(H) = \chi(H)$. 
-
-%  	Докажите, что каждый интервальный граф совершенен. Приведите алгоритм, красящий интервальный граф $G = (V, E)$ с $|V| = n$ в $\omega(H)$ цветов за время $O(n \log(n))$.
-
-%   \item
-%  	В фирму поступают заказы, которые можно выполнять в произвольном
-%  	порядке. В каждый момент времени можно работать ровно над одним
-%  	заказом.  Изначально заказов нет, $i$-й заказ поступает в момент
-%  	времени $r_i$, работать над ним нужно $t_i$. 
-
-%  	Все заказы объединены в проекты (один заказ относится к одному
-%  	проекту, заказы из одного проекта могут поступать не подряд).
-
-%  	Пусть $e_i$~-- момент окончания выполнения последнего (в порядке
-%  	выполнения) из заказов в проекте с номером $i$.
-
-%  	Нужно распределить работу над заказами так, чтобы минимизировать
-%  	$\sum_i e_i$. Свойства заказа ($r_i, t_i$, его проект) не известны
-%  	до момента его поступления.  Переходить от одного заказа к другому
-%  	можно в любой момент времени (даже если заказ не доделан до конца).
-
-%  	Придумайте решение, которое не более чем в два раза хуже
-%  	оптимального.  Время $\O(n \log n)$, при условии, что всего поступит $n$ заказов.
 \end{enumerate}
     
+\subsection{DFS HW12}
+\begin{enumerate}
+    \item Пусть дано дерево $T=\langle V,E\rangle$. Для каждого ребра вычислить, сколько простых путей проходит через него. $\O(|V|+|E|)$.
+    \begin{solution}
+        Пусть есть какое-то ребро. Тогда количество путей, проходящих через него считается через произведение числа вершин с одной стороны на число вершин с другой стороны. Также для нашего дерева можно заключить, что если с одной стороны ребра $k$ вершин и всего вершин $n$, то с другой стороны ребра $n-k$ вершин. В связи с этим нам нужно найти количество вершин лишь в одном поддереве. Для этого используем DFS с модификацией, что мы будем записывать времена входа и выхода из вершины. По этим временам можно определить количество вершин в поддереве через формулу $N=\frac{out-in+1}{2}$. Соответственно, для каждой вершины мы будем запоминать это значение. Для вывода ответа пройдемся по всем ребрам и посчитаем $k\cdot(n-k)$, где $k$ -- минимум среди посчитанных $N$ для обеих вершин текущего ребра. Запуск DFS и получение ответа дают асимптотику $\O(|V|+|E|)$.
+    \end{solution}
+
+\end{enumerate}
