sln: add sln to 12.5.a

--- a/hw12.tex
+++ b/hw12.tex
@@ -221,5 +221,15 @@
     \begin{solution}
         Пусть есть какое-то ребро. Тогда количество путей, проходящих через него считается через произведение числа вершин с одной стороны на число вершин с другой стороны. Также для нашего дерева можно заключить, что если с одной стороны ребра $k$ вершин и всего вершин $n$, то с другой стороны ребра $n-k$ вершин. В связи с этим нам нужно найти количество вершин лишь в одном поддереве. Для этого используем DFS с модификацией, что мы будем записывать времена входа и выхода из вершины. По этим временам можно определить количество вершин в поддереве через формулу $N=\frac{out-in+1}{2}$. Соответственно, для каждой вершины мы будем запоминать это значение. Для вывода ответа пройдемся по всем ребрам и посчитаем $k\cdot(n-k)$, где $k$ -- минимум среди посчитанных $N$ для обеих вершин текущего ребра. Запуск DFS и получение ответа дают асимптотику $\O(|V|+|E|)$.
     \end{solution}
-
+    \item[3.] Найти в \textbf{неорграфе} все вершины, через которые  проходит любой путь $a\rightsquigarrow b$. $\O(|V|+|E|)$.
+    \begin{solution}
+        В данной задаче интересно найти точки сочленения, потому что имея точку сочленения, соединяющую два подграфа, то пусть из одного подграфа в другой обязательно будет проходить через эту самую точку сочленения. На лекции разбирались поиск всех точек сочленения за $\O(|V|+|E|)$. Однако теперь нужно понять, как нужно сократить это множество, чтобы через оставшиеся точки сочленения проходил любой путь $a\rightsquigarrow b$. Если из точки сочленения выходит хотя бы поддерево длины хотя бы 2 (цепочка и двух ребер), то такая точка сочленения нам не подходит, потому что мы сможем в этом поддереве найти путь, который не будет проходить через точку солченения, но при этом все равно будет существовать в исходном графе. Поэтому нужно оставлять только те точки сочленения, из которых выходят листья. Кажется, что для решения задачи в такой постановке подходят лишь деревья, которые представляют собой центральную вершину, из которой выходит множество листьев (форма ежа). Тогда нужно просто пройтись по вершинам и вычислить ту, которая будет иметь наибольшую степень. Для дерева асимптотика будет $\O(|V|+|E|)=\O(|V|)$
+    \end{solution}
+    \item[5.] Дано дерево $T=\langle V, E\rangle$.
+    \begin{enumerate}
+        \item[(a)] Найдите центроид дерева -- вершину $c$, для которой минимальна $\sum_{v\in V}dist(v,c)$. $\O(|V|)$.
+        \begin{solution}
+            Если в этом дереве $n$ вершин, то размеры поддеревьев, исходящих из $c$ не должны превышать $n/2$. Можно тогда найти этот центроид $c$, запустив DFS на нашем дереве. Имея два поддерева, можно определить размер одного, основываясь на размерах другого -- как в первой задаче. Из текущей вершины спускаемся в того ребенка, размер поддерева которого максимален. Будем спускаться, пока размер ребенка больше или равен $n/2$. Как только это неравенство перестанет выполнять, это будет значить, что мы находимся в центроиде. Поскольку запуск DFS в дереве, то он работает за $\O(|V|)$.
+        \end{solution}
+    \end{enumerate}
 \end{enumerate}
