--- a/algo_template.tex
+++ b/algo_template.tex
@@ -95,6 +95,7 @@
   % \input{hw09.tex}
   % \input{hw10.tex}
   % \input{hw11.tex}
-  \input{hw12.tex}
+  % \input{hw12.tex}
+  \input{p01.tex}
 
 \end{document}
