sln: add sln to 1

--- a/p01.tex
+++ b/p01.tex
@@ -75,6 +75,13 @@
   \item
     Дан взвешенный орграф с положительными весами и вершина $s$.
     Нужно для каждой вершины $v$ найти число кратчайших путей из $s$ в $v$ по модулю $p$. $\O(E \log V)$.
+    \begin{solution}
+      Воспользуемся алгоритмом Дейкстры для решения данной задачи. Модернизируем только этот алгоритм в одном месте -- будем хранить для каждой вершины еще и счетчик (количество кратчайших путей до этой вершины) и когда мы вытащили очередную вершину из очереди и смотрим, в какие вершины идут из нее ребра, то, если известное кратчайшее расстояние для этой вершины совпадает с [расстояние до текущей плюс вес ребра], то увеличиваем счетчик на 1 и берем модуль по $p$; если известное кратчайшее расстояние для этой вершины больше, чем [расстояние до текущей плюс вес ребра], то обновляем значение кратчайшего расстояния и делаем счетчик равным единице; в противном случае ничего не делаем, продолжаем алгоритм.
+
+      Корректность данного алгоритма опирается на корректность алгоритма Дейкстры, который не учитывает количество минимальных путей, и если он встречается с ситуацией, когда для какой-то вершины известное для нее кратчайшее расстояние совпадает с расстоянием до предыдущей плюс ребро, то ничего не происходит, он просто не обновляет значение кратчайшего расстояния для данной вершины. Модернизация алгоритма Дейкстры в виде добавления счетчика кратчайших путей по сути добавляет возможность отслеживать такие ситуации. Причем это работает корректно, ведь, если расстояние до следующей совпадает с расстоянием до текущей плюс соединяющее ребро, то счетчик увеличивается, если то же самое расстояние оказывается большим, то счетчик обновляется до 1 (как и значение кратчайшего расстояния), а в противном случае, когда расстояние до следующей меньше, чем расстояние до текущей плюс ребро, счетчик никак не изменяется (как и значение кратчайшего расстояния).
+
+      Асимптотика данного алгоритма совпадает с асимптотикой алгоритма Дейкстры, потому что по сути добавляется всего лишь одна проверка, которая работает за $\O(1)$, а Дейкстра на $d$-куче работает за $\O(E \log V)$.
+    \end{solution}
 
   \item
     В орграфе есть бесплатные и $K$ типов платных ребер. Передвижение
