sln: add sln to 5 (a)

--- a/p01.tex
+++ b/p01.tex
@@ -111,16 +111,33 @@
     добавляются в кучу (или делается \texttt{DecreaseKey}, если вершина уже там).
     \begin{enumerate}
       \item Покажите, что этот алгоритм корректно вычисляет кратчайшие пути, если нет циклов отрицательного веса.
+      \begin{solution}
+        Циклов отрицательного веса действительно быть не должно, чтобы алгоритм продолжал быть корректным, потому что если есть отрицательный цикл, то, войдя в него, Дейкстра будет бесконечно крутиться в нем и не выйдет никогда. Если же циклов отрицательного веса нет, то даже если в графе есть ребра с отрицательными весами, то Дейкстра будет корректно вычислять кратчайшие пути, но только будет делать это медленнее (потому что одну и ту же вершину Дейкстра может положить в очередь больше, чем один раз). Проще всего показать этот факт на следующем примере:
+        \begin{tikzpicture}
+          \node[circle,draw] (A) at (0,0) {A};
+          \node[circle,draw] (B) at (2,0) {B};
+          \node[circle,draw] (C) at (1,-1.73) {C};
+          
+          \draw[->] (A) -- node[above] {2} (B);
+          \draw[->] (A) -- node[left] {1} (C);
+          \draw[->] (B) -- node[left] {-4} (C);
+          \draw[->] (C) -- (2.7,-1.73);
+          \draw[->] (C) -- (2.7,-2.73);
+          \draw[->] (C) -- (2.7,-0.53);
+        \end{tikzpicture}
+        
+        Мы изначально достаем вершину А и просчитываем кратчайшие расстояния до В (2) и С (1). Дальше достаем С, потому что у нее кратчайшее расстояние. Соответственно, для С мы релаксируем какие-то исходящие из нее ребра, просчитываем для каких-то других вершин кратчайшие расстояния, а потом в какой-то момент мы достаем вершину В и обновляем кратчайшее растояние до С, поэтому С снова кладется в очередь и после этого нужно заново релаксировать ее ребра. По сути работает тот же самый алгоритм Дейкстры, просто отрицательные ребра могут вот в таком ключе сильно замедлять его работу, никак не влияя на корректность его работы.
+      \end{solution}
       \item Придумайте пример без циклов отрицательного веса, на котором время работы экспоненциально.
     \end{enumerate}
 
-\subsection*{Дополнительные задачи}
+% \subsection*{Дополнительные задачи}
 
-  \item
-    Модифицируем условия задачи про бочки: есть $n$ бочек, $i$-я бочка имеет
-    объем $v_i$ ($v_i > 0$) и в начальный момент содержит $c_i$ воды
-    ($0 \le c_i \le v_i$). Операция переливания определена как в задаче из практики.
-    Придумайте такие $n$ и вещественные $v_i$, $c_i$, чтобы соответствующий граф
-    состояний, достижимых с помощью переливаний из начального, получился бесконечным.  
+%   \item
+%     Модифицируем условия задачи про бочки: есть $n$ бочек, $i$-я бочка имеет
+%     объем $v_i$ ($v_i > 0$) и в начальный момент содержит $c_i$ воды
+%     ($0 \le c_i \le v_i$). Операция переливания определена как в задаче из практики.
+%     Придумайте такие $n$ и вещественные $v_i$, $c_i$, чтобы соответствующий граф
+%     состояний, достижимых с помощью переливаний из начального, получился бесконечным.  
 
 \end{enumerate}
