fix: correct task 5

--- a/p01.tex
+++ b/p01.tex
@@ -76,9 +76,9 @@
     Дан взвешенный орграф с положительными весами и вершина $s$.
     Нужно для каждой вершины $v$ найти число кратчайших путей из $s$ в $v$ по модулю $p$. $\O(E \log V)$.
     \begin{solution}
-      Воспользуемся алгоритмом Дейкстры для решения данной задачи. Модернизируем только этот алгоритм в одном месте -- будем хранить для каждой вершины еще и счетчик (количество кратчайших путей до этой вершины) и когда мы вытащили очередную вершину из очереди и смотрим, в какие вершины идут из нее ребра, то, если известное кратчайшее расстояние для этой вершины совпадает с [расстояние до текущей плюс вес ребра], то увеличиваем счетчик на 1 и берем модуль по $p$; если известное кратчайшее расстояние для этой вершины больше, чем [расстояние до текущей плюс вес ребра], то обновляем значение кратчайшего расстояния и делаем счетчик равным единице; в противном случае ничего не делаем, продолжаем алгоритм.
+      Воспользуемся алгоритмом Дейкстры для решения данной задачи. Модернизируем только этот алгоритм в одном месте -- будем хранить для каждой вершины еще и счетчик (количество кратчайших путей до этой вершины, инициализируем до первой вершины -- 1, до остальных -- 0) и когда мы вытащили очередную вершину из очереди и смотрим, в какие вершины идут из нее ребра, то, если известное кратчайшее расстояние для этой вершины совпадает с [расстояние до текущей плюс вес ребра], то увеличиваем счетчик на значение счетчика в текущей вершине и берем модуль по $p$; если известное кратчайшее расстояние для этой вершины больше, чем [расстояние до текущей плюс вес ребра], то обновляем значение кратчайшего расстояния и делаем счетчик равным значению счетчика для текущей вершины; в противном случае ничего не делаем, продолжаем алгоритм.
 
-      Корректность данного алгоритма опирается на корректность алгоритма Дейкстры, который не учитывает количество минимальных путей, и если он встречается с ситуацией, когда для какой-то вершины известное для нее кратчайшее расстояние совпадает с расстоянием до предыдущей плюс ребро, то ничего не происходит, он просто не обновляет значение кратчайшего расстояния для данной вершины. Модернизация алгоритма Дейкстры в виде добавления счетчика кратчайших путей по сути добавляет возможность отслеживать такие ситуации. Причем это работает корректно, ведь, если расстояние до следующей совпадает с расстоянием до текущей плюс соединяющее ребро, то счетчик увеличивается, если то же самое расстояние оказывается большим, то счетчик обновляется до 1 (как и значение кратчайшего расстояния), а в противном случае, когда расстояние до следующей меньше, чем расстояние до текущей плюс ребро, счетчик никак не изменяется (как и значение кратчайшего расстояния).
+      Корректность данного алгоритма опирается на корректность алгоритма Дейкстры, который не учитывает количество минимальных путей, и если он встречается с ситуацией, когда для какой-то вершины известное для нее кратчайшее расстояние совпадает с расстоянием до предыдущей плюс ребро, то ничего не происходит, он просто не обновляет значение кратчайшего расстояния для данной вершины. Модернизация алгоритма Дейкстры в виде добавления счетчика кратчайших путей по сути добавляет возможность отслеживать такие ситуации. Причем это работает корректно, ведь, если расстояние до следующей совпадает с расстоянием до текущей плюс соединяющее ребро, то счетчик увеличивается на значение счетчика текущей вершины, если то же самое расстояние оказывается большим, то счетчик обновляется до значения счетчика текущей вершины, а в противном случае, когда расстояние до следующей меньше, чем расстояние до текущей плюс ребро, счетчик никак не изменяется.
 
       Асимптотика данного алгоритма совпадает с асимптотикой алгоритма Дейкстры, потому что по сути добавляется всего лишь одна проверка, которая работает за $\O(1)$, а Дейкстра на $d$-куче работает за $\O(E \log V)$.
     \end{solution}
@@ -125,7 +125,7 @@
           \draw[->] (C) -- (2.7,-2.73);
           \draw[->] (C) -- (2.7,-0.53);
         \end{tikzpicture}
-        
+
         Мы изначально достаем вершину А и просчитываем кратчайшие расстояния до В (2) и С (1). Дальше достаем С, потому что у нее кратчайшее расстояние. Соответственно, для С мы релаксируем какие-то исходящие из нее ребра, просчитываем для каких-то других вершин кратчайшие расстояния, а потом в какой-то момент мы достаем вершину В и обновляем кратчайшее растояние до С, поэтому С снова кладется в очередь и после этого нужно заново релаксировать ее ребра. По сути работает тот же самый алгоритм Дейкстры, просто отрицательные ребра могут вот в таком ключе сильно замедлять его работу, никак не влияя на корректность его работы.
       \end{solution}
       \item Придумайте пример без циклов отрицательного веса, на котором время работы экспоненциально.
