sln: add sln to task 5 (b)

--- a/p01.tex
+++ b/p01.tex
@@ -129,6 +129,42 @@
         Мы изначально достаем вершину А и просчитываем кратчайшие расстояния до В (2) и С (1). Дальше достаем С, потому что у нее кратчайшее расстояние. Соответственно, для С мы релаксируем какие-то исходящие из нее ребра, просчитываем для каких-то других вершин кратчайшие расстояния, а потом в какой-то момент мы достаем вершину В и обновляем кратчайшее растояние до С, поэтому С снова кладется в очередь и после этого нужно заново релаксировать ее ребра. По сути работает тот же самый алгоритм Дейкстры, просто отрицательные ребра могут вот в таком ключе сильно замедлять его работу, никак не влияя на корректность его работы.
       \end{solution}
       \item Придумайте пример без циклов отрицательного веса, на котором время работы экспоненциально.
+      \begin{solution}
+        Можно составить конструкцию из треугольников следующим образом:
+
+        \begin{tikzpicture}
+          \node[circle,draw] (A) at (0,0) {0};
+          \node[circle,draw] (B) at (2,0) {1};
+          \node[circle,draw] (C) at (1,-1.73) {$k_0$};
+          \node[circle,draw] (D) at (4,0) {2};
+          \node[circle,draw] (E) at (3,-1.73) {$k_1$};
+          
+          \draw[->] (A) -- node[above] {0} (B);
+          \draw[->] (A) -- node[left] {$y$} (C);
+          \draw[->] (C) -- node[right] {$-2y$} (B);
+          \draw[->] (B) -- node[above] {0} (D);
+          \draw[->] (B) -- node[right] {$x$} (E);
+          \draw[->] (E) -- node[right] {$-2x$} (D);
+        \end{tikzpicture}
+        \hspace{1cm}
+        \ldots
+        \begin{tikzpicture}
+          \node[circle,draw] (A) at (0,0) {$n-2$};
+          \node[circle,draw] (B) at (2,0) {$n-1$};
+          \node[circle,draw] (C) at (1,-1.73) {$k_{n-2}$};
+          \node[circle,draw] (D) at (4,0) {$n$};
+          \node[circle,draw] (E) at (3,-1.73) {$k_{n-1}$};
+          
+          \draw[->] (A) -- node[above] {0} (B);
+          \draw[->] (A) -- node[left] {-4} (C);
+          \draw[->] (C) -- node[right] {2} (B);
+          \draw[->] (B) -- node[above] {0} (D);
+          \draw[->] (B) -- node[right] {1} (E);
+          \draw[->] (E) -- node[right] {-2} (D);
+        \end{tikzpicture}
+
+        В таком случае понятно, что будет экспоненциальное время работы алгоритма, потому что он дойдет до самого конца (вершина $n$) по нулевым ребрам, потом будет вытаскивать из очереди нижние вершины справа налево и перепросчитывать свои результаты снова и снова, потому что отрицательное ребро каждый раз изменяет значение кратчайшего пути, что в свою очередь снова добавляет очередную вершину в очередь для повторной обработки. Количество перерасчетов в таком случае будет экспоненциально.
+      \end{solution}
     \end{enumerate}
 
 % \subsection*{Дополнительные задачи}
