sln: add sln to task 3

--- a/p01.tex
+++ b/p01.tex
@@ -99,6 +99,13 @@
     У каждого ребра $e$ есть емкость $C_e$ --- минимальное количество воды в этом ребре, при котором по нему больше
     нельзя двигаться (мы должны закончить движение по ребру не позднее момента достижения его емкости). Найдите
     максимальное $L$, при котором все еще существует возможность добраться от $s$ до $t$ за $\O((V + E)\log{C_{\max}})$.
+    \begin{solution}
+      Для решения данной задачи воспользуемся поиском в ширину и бинарным поиском. Для начала отсортируем $C_e$ по возрастанию. Будем поддерживать глобальный таймер, который полезен тем, что, если емкость меньше, чем текущее время, умноженное на текущую длину пути, то ребро фактически недоступно для дальнейшего движения по нему. Запускаем бинарный поиск $L$ по массиву $C_e$ и, с помощью bfs, проверяем, достижима ли вершина $t$ из вершины $s$, с учетом исчезающих с течением времени ребер. Если текущее значение $L$ не подходит (слишком велико и вершина недостижима), то ищем $L$ в левом подмассиве, в противном случае -- в правом.
+
+      Корректность данного алгоритма заключается в том, что бинарный поиск корректно найдет искомое $L$ на основе корректных оценок достижимости вершины $t$ из вершины $s$ алгоритма bfs.
+
+      Асимптотика данного решения основывается на асимптотике алгоритма бинарного поиска $\O(\log{C_{\max}})$, который на каждом шаге запускает поиск в ширину $\O(V + E)$. Суммарно $\O((V + E)\log{C_{\max}})$.
+    \end{solution}
 
   \item
     Постройте матрицу $n \times n$, состоящую из клеток-стенок и пустых клеток,
