--- a/algo_template.tex
+++ b/algo_template.tex
@@ -96,6 +96,7 @@
   % \input{hw10.tex}
   % \input{hw11.tex}
   % \input{hw12.tex}
-  \input{p01.tex}
+  % \input{p01.tex}
+  \input{p02.tex}
 
 \end{document}
