sln: add sln to task 2

--- a/p02.tex
+++ b/p02.tex
@@ -100,6 +100,10 @@
     вершины). Докажите, что если в графе нет циклов отрицательного
     веса, то алгоритм найдет все кратчайшие пути из $v_1$ за $\frac{n}{2}$
     стадий.
+    \begin{solution}
+      Если уже известен кратчайший путь от исходной вершины до $i$-ой вершины, то на очередной стадии, этот алгоритм, рассмотрев ребра из $v_i$ в $v_j$, определит кратчайшее расстояние до $v_j$.
+      Теперь посмотрим, как получается кратчайшее расстояние от исходной вершины до $v_i$. Понятно, что кратчайший путь до нее будет состоять из последовательности вершин, каждая из которых присутствует не более одного раза, так как циклов отрицательного веса нет. Любая часть этой последовательности является кратчайшим путем до очередной вершины и может быть разбита на отрезки монотонного возрастания и убывания индексов вершин. В связи с этим такой алгоритм Беллмана-Форда будет за одну стадию обрабатывать одну возрастающую и одну убывающую последовательность в том же порядке, в котором они следуют во всей последовательности. В итоге после одной стадии будет найден кратчайший путь до последней вершины первого промежутка убывания вершин $v_j$. Худший случай -- когда вершины чередуются (т.е. промежутки возрастания и убывания по единичной длине). И в худшем случае задача сокращается хотя бы на 2 вершины за 1 стадию, ведь остается рассмотреть ребра кратчайшего пути от $v_j$ до $v_i$. Поэтому, если предположить, что длина кратчайшего пути $n$, то за $\frac{n}{2}$ стадий алгоритм найдет кратчайшие пути из $v_1$ до любых $v_i$.
+    \end{solution}
 
   \item
     Дан взвешенный орграф $(V, E)$, посчитайте от начальной вершины $s$ до всех остальных
