--- a/algo_template.tex
+++ b/algo_template.tex
@@ -97,6 +97,7 @@
   % \input{hw11.tex}
   % \input{hw12.tex}
   % \input{p01.tex}
-  \input{p02.tex}
+  % \input{p02.tex}
+  \input{p03.tex}
 
 \end{document}
